--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="project-m.html">Project MBTI</a></li>
-                                    <li><a class="dropdown-item" href="project-t.html">Project Tetromino</a></li>
                                     <li><a class="dropdown-item" href="project-s.html">Project S@ndwich</a></li>
                                     <!--<li><hr class="dropdown-divider" /></li>-->
                                 </ul>
                             </li>
+                            <li class="nav-item"><a class="nav-link" href="toolkit.html">Toolkit</a></li>
                             <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
@@ -79,12 +79,12 @@
                                 </div>
                             </div>
                             <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <!--<div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center row ps-3">
                                         <div class="p-5 col">
                                             <h2 class="fw-bolder">Project Tetromino</h2>
-                                            <p>The financing of U.S. heathcare is messed up, with numerous insurance plans, each with different networks, costs, and coverage. This complexity often leads to decision fatigue and suboptimal choices.</p>
+                                            <p>The financing of U.S. healthcare is messed up, with numerous insurance plans, each with different networks, costs, and coverage. This complexity often leads to decision fatigue and suboptimal choices.</p>
                                             <p>Project Tetromino elevates your insurance literacy by sharing insider knowledge, so you can avoid the hidden traps.</p>
                                             <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="/project-t.html">Learn More</a>
                                         </div>
@@ -93,7 +93,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                             <!-- Project Card 3-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
