--- a/resources.html
+++ b/resources.html
@@ -43,11 +43,11 @@
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="project-m.html">Project MBTI</a></li>
-                                    <li><a class="dropdown-item" href="project-t.html">Project Tetromino</a></li>
                                     <li><a class="dropdown-item" href="project-s.html">Project S@ndwich</a></li>
                                     <!--<li><hr class="dropdown-divider" /></li>-->
                                 </ul>
                             </li>
+                            <li class="nav-item"><a class="nav-link" href="toolkit.html">Toolkit</a></li>
                             <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
@@ -55,11 +55,11 @@
                 </div>
             </nav>
             <!--Page Content-->
-            <section class="px-5 text-center container my-5">
-                <div class="row py-lg-5">
+            <section class="container px-5 my-5">
+                <div class="text-center mb-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resources</span></h1>
-                        <p class="lead text-muted pt-sm-3">Your go-to destination for insightful articles and practical tips. Enjoy exploring!</p>
+                        <p class="lead text-muted pt-sm-3">Your go-to destination for insightful articles and practical tools. Enjoy exploring!</p>
                     </div>
                 </div>
             </section>
@@ -69,14 +69,14 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                     <div class="card shadow-sm">
-                        <img src="assets/resources/Slide1.png" alt="shrinkflation">
+                        <img src="assets/resources/aca_promo.png" alt="shrinkflation">
                         <div class="card-body">
-                        <p class="card-text fw-normal">Shrinkflation in Health Insurance <br />Smaller networks, Lower premiums</p>
+                        <p class="card-text fw-normal">Combating Choice Overload<br />Follow these rules</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                            <a class="btn btn-sm btn-outline-dark" href="https://open.substack.com/pub/khrisdai/p/shrinkflation-in-health-insurance?r=2iykvd&utm_campaign=post&utm_medium=web" role="button" target="_blank">Read</a>
+                            <a class="btn btn-sm btn-outline-dark" href="resources/choose.html" role="button">Read</a>
                             </div>
-                            <small class="text-body-secondary">3 mins</small>
+                            <small class="text-body-secondary">2 mins</small>
                         </div>
                         </div>
                     </div>
@@ -84,12 +84,12 @@
                     
                    <div class="col">
                     <div class="card shadow-sm">
-                        <img src="assets/resources/Slide2.png" alt="coming soon">
+                        <img src="assets/resources/aca_map.png" alt="coming soon">
                         <div class="card-body">
-                        <p class="card-text">Minesweeper Healthcare Edition<br />Can We Change the Game?</p>
+                        <p class="card-text fw-normal">Lost in ACA Marketplace Maze?<br />Use this visual guide</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-dark">Read</button>
+                            <a class="btn btn-sm btn-outline-dark" href="resources/ACA_map.html" role="button">Read</a>
                             </div>
                             <small class="text-body-secondary"></small>
                         </div>
@@ -98,14 +98,14 @@
                     </div>
                     <div class="col">
                     <div class="card shadow-sm">
-                        <img src="assets/resources/Slide2.png" alt="coming soon">
+                        <img src="assets/resources/shrinkflation.png" alt="shrinkflation">
                         <div class="card-body">
-                        <p class="card-text">Price in the Eyes of the Beholder: How Healthcare Price Transparency is (Not) Transforming Healthcare</p>
+                        <p class="card-text fw-normal">Shrinkflation in Health Insurance <br />Smaller networks, lower premiums</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-dark">Read</button>
+                            <a class="btn btn-sm btn-outline-dark" href="https://open.substack.com/pub/khrisdai/p/shrinkflation-in-health-insurance?r=2iykvd&utm_campaign=post&utm_medium=web" role="button" target="_blank">Read</a>
                             </div>
-                            <small class="text-body-secondary"></small>
+                            <small class="text-body-secondary">3 mins</small>
                         </div>
                         </div>
                     </div>
