--- a/toolkit.html
+++ b/toolkit.html
@@ -28,8 +28,12 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- Load d3.js -->
+        <script src="https://d3js.org/d3.v4.js"></script>
+        <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+        <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
     </head>
-    <body class="d-flex flex-column">
+    <body class="d-flex flex-column h-100 bg-light">
         <main class="flex-shrink-0">
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
@@ -54,53 +58,54 @@
                     </div>
                 </div>
             </nav>
-            <!-- Page content-->
-            <section class="py-5">
-                <div class="container px-5">
-                    <!-- Contact form-->
-                    <div class="bg-light rounded-4 py-5 px-4 px-md-5">
-                        <div class="text-center mb-5">
-                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"><i class="bi bi-rocket-takeoff"></i></div>
-                            <h1 class="fw-bolder">Get in touch</h1>
-                            <div class="d-flex justify-content-center fs-2 gap-4">
-                                <a class="text-gradient" href="mailto:khris.dai@icloud.com?subject=Outreach%20from%20Sandbox"><i class="bi bi-envelope"></i></a>
-                                <a class="text-gradient" href="https://www.linkedin.com/in/khrisdai/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <a class="text-gradient" href="https://khrisdai.substack.com/" target="_blank"><i class="bi bi-substack"></i></a>
+            <!-- Page Content-->
+            <div class="container px-5 my-5">
+                <div class="text-center mb-5">
+                    <div class="col-md-8 mx-auto">
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Toolkit</span></h1>
+                        <p class="lead text-muted pt-sm-3">Join the <a href="https://czptf3ysf5q.typeform.com/to/m9zBnqSx" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">waitlist</a> for our AI-empowered tools.</p>
+                    </div>
+                    <!--Feature list-->
+                    <div class="row gx-5 bg-white p-4 rounded-4 shadow">
+                        <!-- Feature item-->
+                        <div class="col-md-6 mb-3">
+                            <div class="text-center">
+                                <i class="bi bi-ui-checks-grid icon-feature text-gradient d-block mb-3"></i>
+                                <h3 class="font-alt">ACA on the Fly</h3>
+                                <!-- <p class="text-muted mb-2">description</p> -->
+                                <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
                             </div>
-                            <!--<p class="lead fw-normal text-muted mb-0">Let's work together!</p>-->
                         </div>
-                        <div class="row gx-5 justify-content-center">
-                            <div class="col-lg-8 col-xl-6">
-                                <form id="contactForm" method="post" action="https://script.google.com/macros/s/AKfycbx_UefudVapsz8E6Xuzu-TWfgJDFrl80XiQwNJMQ28/dev">
-                                    <!-- Name input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" placeholder="Name" name="name">
-                                        <label for="name">Full name</label>
-                                        <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                                    </div>
-                                    <!-- Email address input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" type="email" placeholder="Email Address" name="email">
-                                        <label for="email">Email address</label>
-                                        <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                        <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                                    </div>
-                                    <!-- Message input-->
-                                    <div class="form-floating mb-3">
-                                        <textarea class="form-control" placeholder="Message" rows="4" name="message"></textarea>
-                                        <label for="message">Message</label>
-                                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                                    </div>
-                                    <!-- Submit Button-->
-                                    <div class="d-grid">
-                                        <button class="btn btn-primary btn-lg">Send Message</button>
-                                    </div>
-                                </form>
+                        <!-- Feature item-->
+                        <div class="col-md-6 mb-3">   
+                            <div class="text-center">
+                                <i class="bi bi-noise-reduction icon-feature text-gradient d-block mb-3"></i>
+                                <h3 class="font-alt">COBRA or NOT</h3>
+                                <!-- <p class="text-muted mb-2">description</p> -->
+                                <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
+                            </div>
+                        </div>
+                        <!-- Feature item-->
+                        <div class="col-md-6 mb-3">
+                            <div class="text-center">
+                                <i class="bi bi-house-heart-fill icon-feature text-gradient d-block mb-3"></i>
+                                <h3 class="font-alt">Plan Fam</h3>
+                                <!-- <p class="text-muted mb-2">description</p> -->
+                                <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
+                            </div>
+                        </div>
+                        <!-- Feature item-->
+                        <div class="col-md-6 mb-3">
+                            <div class="text-center">
+                                <i class="bi bi-shop-window icon-feature text-gradient d-block mb-3"></i>
+                                <h3 class="font-alt">SMB Champion</h3>
+                                <!-- <p class="text-muted mb-2">description</p> -->
+                                <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
@@ -121,10 +126,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!--<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>-->
     </body>
 </html>
